--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         <meta-data
             android:name="com.parse.CLIENT_KEY"
             android:value="@string/parse_client_key" />
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+                    android:value="@string/facebook_app_id"/>
         <activity
             android:name=".Main"
             android:label="@string/app_name"
