--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,19 +14,26 @@
         <meta-data
             android:name="com.parse.CLIENT_KEY"
             android:value="@string/parse_client_key" />
+
         <activity
             android:name=".Main"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+
+        <user-permission android:name="android.permission.INTERNET" />
+        <user-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+        <activity
+            android:name=".EventsActivity"
+            android:label="@string/title_activity_events">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <user-permission android:name="android.permission.INTERNET" />
-        <user-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
     </application>
 
 </manifest>
