--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+
+        <user-permission android:name="android.permission.INTERNET" />
+        <user-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
         <meta-data
             android:name="com.parse.APPLICATION_ID"
             android:value="@string/parse_add_id" />
@@ -21,33 +26,19 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
-        <user-permission android:name="android.permission.INTERNET" />
-        <user-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
         <activity
             android:name=".EventsActivity"
             android:label="@string/title_activity_events">
-           <!-- <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
         </activity>
-        <activity
-            android:name=".EventHunters_Home"
-            android:label="@string/title_activity_events">
-            <!-- <intent-filter>
-                 <action android:name="android.intent.action.MAIN" />
 
-                 <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>-->
-        </activity>
+        //new eventhunters home
+        <activity android:name=".EventHunters_Home"/>
+        <activity android:name=".CreateEvent"/>
+        <activity android:name=".Event_Status"/>
+
     </application>
 
 </manifest>
