Transition between Attendee/Host; FindEvents page
- Attendee Tab for viewing user’s events they are attending works.
Shows temporary list view
- Renamed view events to FindEvents for users to search for findEvents

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
         <activity android:name=".EventHunters_Home"/>
         <activity android:name=".CreateEvent"/>
         <activity android:name=".Event_Status"/>
+        <activity android:name=".AttendingEvents"/>
+        <activity android:name=".FindEvents"/>
 
     </application>
 
