--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".Event_Status"/>
         <activity android:name=".AttendingEvents"/>
         <activity android:name=".FindEvents"/>
+        <activity android:name=".JoinEvents"/>
 
     </application>
 
