Added Transition from AttendeeView to AttendeeEventDetails
- Made Events implement Serializable so that I can send it through an
Intent to grab it’s data when clicked
- Made prototype for EventStatus in AttendeeView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
         <activity android:name=".Event_Status"/>
         <activity android:name=".AttendingEvents"/>
         <activity android:name=".FindEvents"/>
-        <activity android:name=".JoinEvents"/>
+        <activity android:name=".Attendee_Event_Details"/>
 
     </application>
 
