gui changes in host

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,15 +41,16 @@
         <activity
             android:name=".EventsActivity"
             android:label="@string/title_activity_events" />
-=======
+        =======
 
-
-      <!--  <activity android:name=".EventHunters_Home" /> -->
-        <activity android:name=".CreateEvent" android:label="Create Event"/>
+        <!-- <activity android:name=".EventHunters_Home" /> -->
+        <activity
+            android:name=".CreateEvent"
+            android:label="Create Event" />
         <activity android:name=".Event_Status" />
         <activity android:name=".AttendingEvents" />
         <activity android:name=".FindEvents" />
-      <!--  <activity android:name=".JoinEvents" />-->
+        <!-- <activity android:name=".JoinEvents" /> -->
         <activity
             android:name=".EventStatusActivity"
             android:label="Event Status"
@@ -62,6 +63,11 @@
             android:name=".myEvents_both"
             android:label="My Events"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".loading_page"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_loading_page"
+            android:theme="@style/FullscreenTheme"></activity>
     </application>
 
 </manifest>
